    - WoopsiString::encodeCodePoint() numBytes parameter is optional.
    - WoopsiString::getCodePoint() numChars parameter is optional.
    - WoopsiString::getCodePoint() returns the correct number of chars if the
      codepoint is invalid.
    - Fixed clipping bug in PackedFont1::renderChar() (Lakedaemon).
    - Fixed clipping bug in PackedFont16::renderChar() (Lakedaemon).
  
  - New Features:
    - Added Debug::flipToTopScreen().
    - Added Debug::flipToBottomScreen().
    - Added Debug::flipScreens().
    - Added Debug::raiseToTop().
    - Added Debug::lowerToBottom().
    - Added Debug::wvsnprintf().

  V0.99.5 (20100916)
  
  - Fixes:
    - Removed freetype classes, library and example (Lakedaemon's distro will
      provide this functionality).
    - Examples build script uses for loop instead of explicitly named folders.
    - Gadget::checkCollision(Gadget) works correctly.
    - Tests build script uses for loop instead of explicitly named folders.
    - Fixed memory leaks in Text::getLineTrimmedLength().
    - Rewrote RectCache::splitRectangles() for speed and clarity.
    - Increased delays for SDL double click and key repeat times.
    - Fixed memory leak in demo.
    - Fixed memory leak in PackedFontBase::getStringWidth().
    - Fixed memory leak in MultiLineTextBox::moveCursorToPosition().
    - ScrollingPanel::scroll() redraws correctly on top screen.
    - Renamed Text class to Document.
    - Document class contains a WoopsiString instead of inheriting from it.
    - Removed DimmedScreen class (not compatible with new rendering system).
    - Removed erased flag from Gadget.
    - Removed Gadget::erase().
    - Removed Gadget::eraseGadget().
    - Removed Gadget::redraw().
    - Removed Gadget::redrawDirty().
    - Removed Gadget::drawChildren().
    - Removed Gadget::redrawDirtyChildren().
    - ListData destructor does not fire list changed events.
    - Removed AmigaWindow::redrawBorder().
    - Removed Woopsi::eraseRect().